chore: refactorings and dep updates